# Katia

./: .env-dist  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  docker-compose.yml  ipython_config.py  main.py  pyproject.toml
.github/workflows/: linters.yml  publish.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/configuration/: configuration.rst
docs/intro/: architecture.rst  installation.rst  overview.rst  tutorial.rst
katia/: katia.py  owner.py
katia/interpreter/: __init__.py  interpreter.py
katia/logger_manager/: log_config.yaml  logger.py
katia/message_manager/: __init__.py  consumer.py  producer.py
katia/recognizer/: __init__.py  recognizer.py
katia/speaker/: __init__.py  speaker.py
tests/: test_katia.py  test_owner.py
tests/interpreter/: test_interpreter.py
tests/message_manager/: test_katia_consumer.py  test_katia_producer.py
tests/recognizer/: test_recognizer.py
tests/speaker/: test_speaker.py
